styles/index.css
@font-face {
  font-family: "HudsonNYPro-Bold";
  src: url('../fonts/HudsonNYProBold/font.woff2') format('woff2'), url('../fonts/HudsonNYProBold/font.woff') format('woff');
}

h1 {
  font-family: "HudsonNYPro-Bold";
  font-size: 70px;
  letter-spacing: -0.5px;
}

/* Add a black background color to the top navigation */
.topnav {
  background-color: #F04E37;
  padding-top: 10px;
  display: flex;
  align-items: center;
  padding-left: 10px;
  padding-right: 10px;
}

.topnav .logo img {
  width: 110px;
}

/* Style the links inside the navigation bar */
.topnav a {
  color: white;
  text-decoration: none;
  font-size: 11.5px;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: bold;
}

/* Hide the link that should open and close the topnav on small screens */
.topnav .icon-wrapper {
  flex-grow: 1;
  text-align: right;
  display: none;
}

.topnav .page-links {
  flex-grow: 1;
  justify-content: space-between;
  display: flex;
  padding-left: 20px;
  padding-right: 10px;
}

/* Add an active class to highlight the current page */

.topnav a.active {
  background-color: #04AA6D;
  color: white;
}

.section {
  min-height: 755px;
  background-position: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-size: cover;
  padding: 20px;
}

.section p {
  font-family: georgia;
  font-size: 14pt;
  line-height: 1.2;
}

/* Section one*/

.section-one {
  background-color: #F04E37;
  color: white;
  text-align: center;
}

.section-one h1 {
margin-top: calc(5% - 155px);
}

/* Section two */

.section-two {
  background-color: #41AD49;
  color: white;
  text-align: center;
}

.section-two h1 {
  max-width: 770px;
}

/* Section three */

.section-three {
  background-image: url("../assets/bg1.jpg");
  color: white;
  text-align: center;
}

.section-three h1 {
  max-width: 1100px;
}

/* Section four */

.section-four {
  align-items: flex-start;
  background-image: url("../assets/bg2.jpg");
  color: #3D1107;
}

.section-four .title {
  margin-bottom: 40px;
  text-align: left;
  padding-left: 100px;
  max-width: 600px;
}

.section-four p {
  padding-left: 100px;
  max-width: 500px;
}

/* Section five */

.section-five {
  align-items: flex-start;
  background-image: url("../assets/bg3.jpg");
  color: white;
}

.section-five .title {
  margin-bottom: 40px;
  text-align: left;
  padding-left: 100px;
  max-width: 800px;
}

.section-five p {
  padding-left: 100px;
  max-width: 500px;
}

/* Section six */

.section-six {
  align-items: flex-start;
  background-color: #3D1107;
  color: white;
}

.section-six .title {
  margin-bottom: 40px;
  text-align: left;
  padding-left: 100px;
  max-width: 940px;
}

.section-six p {
  padding-left: 100px;
  max-width: 500px;
}

.section-six img {
  max-width: 300px;
  margin-left: 50px;
}

.section-six div {
  display: flex;
}

/* Section seven */

.section-seven {
  align-items: flex-start;
  background-image: url("../assets/bg4.jpg");
  color: white;
}

.section-seven .title {
  margin-bottom: 40px;
  text-align: left;
  padding-left: 100px;
  max-width: 900px;
}

.section-seven p {
  padding-left: 100px;
  max-width: 500px;
}

/* Section eight */

.section-eight {
  align-items: flex-start;
  background-color: #116123;
  color: white;
}

.section-eight .title {
  margin-bottom: 40px;
  text-align: left;
  padding-left: 100px;
  max-width: 940px;
}

.section-eight img {
  width: 150px;
  height: 150px;
  margin-left: 150px;
}

.section-eight .right {
  padding-left: 100px;
  max-width: 500px;
}

.section-eight .left {
  padding-left: 40px;
  max-width: 500px;
}

.section-eight div {
  display: flex;
}

.section-eight .hide {
  display: none;
}

/* Section nine */

.section-nine {
  align-items: flex-start;
  background-color: #F04E37;
  color: white;
  min-height: 500px;
  padding-left: 100px;
  padding-right: 100px;
}

.section-nine .title {
  text-align: left;
  max-width: 1200px;
  font-size: 180px;
  margin-bottom: 40px;
}

.section-nine ul {
  font-family: georgia;
  max-width: 1400px;
  font-size: 14pt;
  line-height: 1.2;
}

.section-nine .content {
  max-width: 1200px;
}

/* Section ten */

.section-ten {
  align-items: flex-start;
  background-image: url("../assets/bg5.jpg");
  color: white;
  padding-left: 100px;
  padding-right: 100px;
}

.section-ten .header {
  margin-bottom: 40px;
  display: flex;
}

.section-ten .title {
  flex-grow: 1;
  padding-right: 30px;
}

.section-ten .content {
  max-width: 940px;
}

.section-ten .img-wrapper img {
  width: 150px;
  height: 150px;
}

/* Footer */

footer {
  background-color: #00050d;
  color: white;
  font-family: Georgia, 'Times New Roman', Times, serif;
  text-decoration: none;
  padding: 20px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

footer .logo-wrapper img {
  width: 100%;
  max-width: 200px;
}

footer .logo-wrapper {
  max-width: 650px;
  padding-right: 20px;
  display: flex;
}

footer .info-wrapper {
  align-self: flex-end;
}

footer .info-wrapper p {
  margin-bottom: 10px;
}

footer .info-wrapper a {
  color: white;
}

footer .text {
  width: 420px;
  display: inline-block;
  padding-left: 25px;
}

/* Breakpoints */

@media only screen and (max-width:1200px) {
  .topnav .page-links {
    display: none;
  }
  .topnav .icon-wrapper {
    display: block;
  }
  .topnav .page-links-mobile {
    display: flex;
    position: absolute;
    top: 58px;
    left: 0;
    flex-direction: column;
    width: 100%;
    padding: 0;
    text-align: right;
    background: rgba(191, 71, 54, .8);
    padding-top: 20px;
  }
  .topnav .page-links-mobile a {
    padding-bottom: 20px;
    padding-right: 20px;
  }
}

/* https://www.w3schools.com/howto/howto_css_media_query_breakpoints.asp */

@media only screen and (max-width: 992px) {

  .section {
    min-height: 100vh;
  }
  

  .section-ten {
    padding-left: 50px;
    padding-right: 50px;
  }
  .section-ten img {
    display: none;
  }
  .section-nine {
    padding-left: 50px;
    padding-right: 50px;
  }
  .section-nine .title {
    font-size: 100px;
  }
  .section-eight {
    padding-left: 10px;
    padding-right: 10px;
  }
  .section-eight img {
    display: none;
  }
  .section-eight .title {
    margin-bottom: 40px;
    padding-left: 10px;
  }
  .section-eight .right {
    padding-left: 10px;
    max-width: 500px;
  }
  .section-eight .left {
    padding-left: 10px;
    max-width: 500px;
  }
  .section-eight div {
    display: block;
  }
  .section-eight .hide {
    display: block;
  }
  .section-seven {
    padding-left: 50px;
    padding-right: 50px;
  }
  .section-seven .title {
    padding-left: 50px;
  }
  .section-seven p {
    padding-left: 50px;
  }
  .section-six .title {
    padding-left: 50px;
  }
  .section-six p {
    padding-left: 50px;
  }
  .section-six img {
    display: none;
  }
  .section-five .title {
    padding-left: 50px;
  }
  .section-five p {
    padding-left: 50px;
  }
  .section-four .title {
    padding-left: 50px;
  }
  .section-four p {
    padding-left: 50px;
  }
  h1 {
    font-size: 55px;
  }
  p {
    font-size: 12px;
  }
  ul {
    font-size: 12px;
  }
  nav {
    display: none;
  }

  footer .logo-wrapper {
    align-items: center;
  }
}

@media only screen and (max-width: 600px) {


  .section {
    min-height: 100vh;
  }

  .section-ten {
    padding-left: 20px;
    padding-right: 20px;
  }
  .section-nine {
    padding-left: 20px;
    padding-right: 20px;
  }
  .section-eight {
    padding-left: 20px;
    padding-right: 20px;
  }
  .section-eight .right {
    max-width: 400px;
  }
  .section-eight .left {
    max-width: 400px;
  }
  .section-eight img {
    display: none;
  }
  .section-seven {
    padding-left: 20px;
    padding-right: 20px;
  }
  .section-seven .title {
    padding-left: 10px;
  }
  .section-seven p {
    padding-left: 10px;
  }
  .section-six .title {
    padding-left: 10px;
    max-width: 400px;
  }
  .section-six p {
    padding-left: 10px;
  }
  .section-six img {
    display: none;
  }
  .section-five .title {
    padding-left: 10px;
    max-width: 400px;
  }
  .section-five p {
    padding-left: 10px;
  }
  .section-four .title {
    padding-left: 10px;
    max-width: 300px;
  }
  .section-four p {
    padding-left: 10px;
  }
  .section p {
    max-width: 400px;
  }
  .section ul {
    max-width: 400px;
  }
  h1 {
    font-size: 35px;
  }
  p {
    font-size: 10px;
  }
  ul {
    font-size: 10px;
  }
  nav {
    display: none;
  }

  footer .text {
    display: none;
  }
}

@media only screen and (max-width: 600px) and (orientation:landscape) {
  .section {
    min-height: 100vh;
  }

}

@media only screen and (max-width: 992px) and (orientation:landscape) {
  .section {
    min-height: 100vh;
  }
  
}

